# Alice-Single

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  CLAUDE.md  CODE_MAP.md  Dockerfile.sandbox  README.md  REFACTORING.md  agent.py  api_server.py  config.py  pyrightconfig.json  request_headers.py  requirements.txt  tui_bridge.py
backend/: pyproject.toml
backend/alice/application/: __init__.py
backend/alice/application/agent/: __init__.py  agent.py  react_loop.py
backend/alice/application/dto/: __init__.py  requests.py  responses.py
backend/alice/application/runtime/: __init__.py  models.py  runtime_context_builder.py  time_provider.py
backend/alice/application/services/: __init__.py  lifecycle_service.py  orchestration_service.py
backend/alice/application/workflow/: __init__.py  base_workflow.py  chat_workflow.py  function_calling_orchestrator.py  tool_workflow.py
backend/alice/cli/: __init__.py  bootstrap.py  main.py
backend/alice/core/: __init__.py  prompts.py
backend/alice/core/config/: __init__.py  loader.py  settings.py
backend/alice/core/container/: __init__.py  container.py  decorators.py
backend/alice/core/event_bus/: __init__.py  event.py  event_bus.py  handler_trait.py
backend/alice/core/exceptions/: __init__.py  base.py  config_errors.py  execution_errors.py  llm_errors.py  memory_errors.py
backend/alice/core/interfaces/: __init__.py  command_executor.py  llm_provider.py  memory_store.py  skill_loader.py
backend/alice/core/logging/: __init__.py  adapter.py  configure.py  configure_legacy.py  formatters.py  jsonl_formatter.py  jsonl_logger.py
backend/alice/core/registry/: __init__.py  command_registry.py  llm_registry.py  memory_registry.py  skill_registry.py
backend/alice/domain/execution/: __init__.py
backend/alice/domain/llm/: __init__.py
backend/alice/domain/memory/: __init__.py
backend/alice/domain/skills/: __init__.py
backend/alice/infrastructure/bridge/: __init__.py  canonical_bridge.py  legacy_compatibility_serializer.py  server.py  stream_manager.py
backend/alice/infrastructure/docker/: __init__.py  client.py  config.py  container_manager.py  image_builder.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini
backend/tests/fixtures/: __init__.py  mock_docker.py  mock_llm.py  mock_responses.py  mock_stream.py  test_config.toml
backend/tests/integration/: __init__.py  test_agent.py  test_bridge.py  test_logging_e2e.py
backend/tests/performance/: test_log_write_speed.py
docs/: README.md  (+3 more)
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
frontend/src/app/: constants.rs  message_queue.rs  mod.rs  selection.rs  state.rs
frontend/src/bridge/: client.rs  mod.rs
frontend/src/core/: dispatcher.rs  mod.rs
frontend/src/ui/: mod.rs  screen.rs
frontend/src/util/: mod.rs  runtime_log.rs
(+197 files in other folders)
